tests/tooling/fixtures/native/execution/positive/if_static_true_else_missing_return_accept.objc3
module IfStaticTrueElseMissingReturnAccept;

fn main() -> i32 {
  if (true) {
    return 42;
  } else {
    let fallback = 7;
  }
}
