tests/tooling/fixtures/native/execution/negative/if_call_unknown_else_missing_return_conservative_reject.objc3
module IfCallUnknownElseMissingReturnConservativeReject;

fn predicate() -> i32 {
  return 1;
}

fn main() -> i32 {
  if (predicate()) {
    return 42;
  } else {
    let fallback = 7;
  }
}
